fix responsive issues for game on smaller devices

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -220,12 +220,12 @@ header p {
 
     #question-score-container {
         height: 20px;
+        margin-bottom: 2%;
     }
 
     #text-display {
         width: 437px;
         height: 132px;
-
     }
 
     #true-false-container {
@@ -260,5 +260,10 @@ header p {
 
     #question-score-container {
         font-size: smaller;
+    }
+    .t-f-button {
+        margin-top: 8px;
+        height: 66px;
+        width: 106px;
     }
 }
